# Python-Training

./: .gitignore
Training-Piscine-Python-for-datascience-0/ex00/: Hello.py
Training-Piscine-Python-for-datascience-0/ex01/: format_ft_time.py
Training-Piscine-Python-for-datascience-0/ex02/: find_ft_type.py
Training-Piscine-Python-for-datascience-0/ex03/: NULL_not_found.py
Training-Piscine-Python-for-datascience-0/ex04/: whatis.py
Training-Piscine-Python-for-datascience-0/ex05/: building.py
Training-Piscine-Python-for-datascience-0/ex06/: ft_filter.py
Training-Piscine-Python-for-datascience-0/ex07/: sos.py
Training-Piscine-Python-for-datascience-0/ex08/: test.py
Training-Piscine-Python-for-datascience-0/ex09/: README.md  pyproject.toml
Training-Piscine-Python-for-datascience-0/ex09/src/LinkedLists/: linkedlist.py
Training-Piscine-Python-for-datascience-0/ex09/src/linked_list_nvaubien.egg-info/: PKG-INFO
Training-Piscine-Python-for-datascience-1/ex00/: give_bmi.py
Training-Piscine-Python-for-datascience-1/ex01/: array2D.py
